# Security-Web

./: .gitignore  Cargo.toml  Makefile  README.md  run_authentication_jwt.exp
authentication_api_password/: Cargo.toml  build.rs
authentication_api_password/db/: database.db  db.sql
authentication_api_password/src/: db.rs  main.rs
authentication_api_password/templates/: index.hbs  layout.hbs
authentication_oauth_2/: Cargo.toml
authentication_oauth_2/db/: setup_db.sh
authentication_oauth_2/src/: main.rs
authentication_password/: Cargo.toml  _env  build.rs
authentication_password/cert/: cert.pem  key.pem
authentication_password/db/: database.db  db.sql
authentication_password/src/: db.rs  main.rs  session_state.rs
authentication_password/templates/: change_password_form.hbs  dashboard.hbs  layout.hbs  login.hbs  registration.hbs
csrf_external_site/: Cargo.toml
csrf_external_site/src/: main.rs
csrf_external_site/templates/: index.hbs  layout.hbs  no-action.hbs
example_attacks/: .gitignore  Cargo.toml  HTML инъекция.md  build.rs
example_attacks/db/: db.sql
example_attacks/src/: db.rs  main.rs
example_attacks/templates/: crlf_injection.hbs  csrf.hbs  html_injection_reflected_get.hbs  html_injection_saved.hbs  http_parameter_pollution.hbs  index.hbs  layout.hbs  xss.hbs
