[package]
name = "authentication_oauth_2"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = {version = "4.5", features = ["secure-cookies", "openssl","default"]}
serde = { version = "1.0", features = ["derive"] }
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-files = "0.6"
actix-cors ="0.7" 
serde_json = "1"
#alcoholic_jwt = "1.0.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
#reqwest = { version = "0.11" , features = ["json"] }
openssl = { version = "0.10" }
lazy_static = "1.4"
regex = "1.10"
 
anyhow ="1"
oauth2 = "4.4"
url = "2.5"

# log error
env_logger = "0.11"
log = "0.4"
 

# Template engine
handlebars = { version = "5.1", features = ["dir_source"] }


# DB
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["chrono"] }