[package]
name = "authentication_password"
version = "0.1.0"
edition = "2021"

build = "build.rs"
 

[dependencies]
actix-web = {version = "4.5", features = ["secure-cookies", "openssl","default"]}
serde = { version = "1.0", features = ["derive"] }
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-files = "0.6"
actix-cors ="0.7" 
serde_json = "1"
#alcoholic_jwt = "1.0.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
#reqwest = { version = "0.11" , features = ["json"] }
openssl = { version = "0.10" }
lazy_static = "1.4"
regex = "1.10"
secrecy = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
actix-web-flash-messages = { version = "0.4", features = ["sessions"] }
argon2 = "0.5"
rand = "0.8"
actix-web-lab = "0.20"
# csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
csrf = "0.4"
hex = "0.4"

# dependencies specific to Auth password
actix-web-httpauth = "0.8"
argonautica = "0.2"
hmac = "0.12"
jwt = "0.16"
sha2 = "0.10"
actix-web-prom = "0.8"
 

# log error
env_logger = "0.11"
log = "0.4"
 

# Template engine
handlebars = { version = "5.1", features = ["dir_source"] }

# DB
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["chrono","uuid"] }