[package]
name = "example_attacks"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
actix-web = {version = "4.5", features = ["secure-cookies", "default"]}
serde = { version = "1.0", features = ["derive"] }
mime = "0.3"
serde_json = "*"
actix-files = "0.6"
futures = "0.3"
futures-util = "0.3"
derive_more = "0.99"
awc = "3.4"
actix-http = "3.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-cors ="0.7" 
actix-multipart = "0.6"

rand = "0.8"

regex = "*"
reqwest = "0.11"

# log error
env_logger = "0.11"
log = "0.4"

# Template engine
handlebars = { version = "5.1", features = ["dir_source"] }

# DB
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "0.31"